--- a/8yhucjbanska0saawn.html
+++ b/8yhucjbanska0saawn.html
@@ -49,7 +49,7 @@ setInterval(updateCountdown, 500);
         </a>
       </div>
       <div id="southeast">
-        <p>Skip the wait? Scan all five flyers 🤔</p>
+        <p>Skip the wait? Scan all five flyers 🤔 - Flyer: #4</p>
       </div>
     </div>
   </div>
