--- a/23igbk2ebdjh23brhj2.html
+++ b/23igbk2ebdjh23brhj2.html
@@ -6,7 +6,7 @@
   <script src="script.js"></script>
 </head>
 <body id="spot1" onload="
-markVisited(4);
+markVisited(1);
 setTimeout(checkCompletion, 500);
 updateCountdown();
 setInterval(updateCountdown, 500);
@@ -49,7 +49,7 @@ setInterval(updateCountdown, 500);
         </a>
       </div>
       <div id="southeast">
-        <p>Skip the wait? Scan all five flyers 🤔</p>
+        <p>Skip the wait? Scan all five flyers 🤔 - Flyer: #1</p>
       </div>
     </div>
   </div>
